# LogMe

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  generateVisualStudioProject.bat  generateXcodeProject.sh
cmake additional/: LogMeVersion.hpp.cmake  printSummary.cmake
examples/basic example/: CMakeLists.txt  Main.cpp
examples/testing/: CLI11.hpp  CMakeLists.txt  Main.cpp
include/: Clock.hpp  Configuration.hpp  LogMe.hpp  LogMeVersion.hpp  Platform.hpp  SharedQueue.hpp  SharedQueue.ixx
src/: Clock.cpp  LogMe.cpp
